# AetherBot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: cities.yaml  settings.yaml
dashboard/: app.py  convergence.html  evolution.html  index.html  math.html  scorecard.html  strategy-lab.html  tracker.html  whitepaper.html
docs/: whitepaper.md
journal/: 2026-03-06.md  2026-03-09.md  2026-03-10.md  README.md
scripts/: backfill_history.py  backfill_price_history.py  check_status.py  inspect_markets.py  reset_paper_trades.py  run_backtest.py  run_bot.py  smoke_test.py  test_live_connectivity.py
src/backtest/: optimizer.py  performance_report.py  replay_engine.py  strategy_runner.py  synthetic_markets.py
src/config/: cities.py  settings.py
src/data/: db.py  ecmwf_fetcher.py  ensemble_fetcher.py  freshness.py  gem_fetcher.py  historical_collector.py  hrrr_fetcher.py  icon_eps_fetcher.py  iem_client.py  kalshi_client.py  kalshi_markets.py  models.py  nws_client.py  parquet_archiver.py
src/execution/: live_trader.py  paper_trader.py  settlement_checker.py
src/monitoring/: alerting.py  brier_tracker.py  calibrator_trainer.py  chart_renderer.py  email_reporter.py  model_scorer.py  pnl_tracker.py  postmortem.py
src/scheduler/: jobs.py  runner.py
src/signals/: adaptive_weights.py  calibration.py  ensemble_probability.py  hrrr_correction.py  model_blender.py
src/strategy/: arbitrage_scanner.py  edge_detector.py  kelly_sizer.py  risk_manager.py
src/utils/: temperature.py  time_utils.py
